Maquetar hero & header section

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 <body>
     
-    <!-- /*Todo el código comentado 
+<!-- /*Todo el código comentado 
 hace parte de la primera elaboración de la landing page*/ -->
-
 <!-- 
     <div class="body">
     <div class="hero">
@@ -89,7 +88,46 @@ hace parte de la primera elaboración de la landing page*/ -->
 
 <footer>Copyright © The Odin Proyect 2025</footer> 
 -->
-        
+
+
+<section class="hero">
+    <header class="header">
+            <div class="logo">
+            Ajedrez
+            </div>
+        <nav class="nav">
+           <ul>
+            <li>
+                <a target="_blank" rel="noopener noreferrer" href="https://lichess.org/">
+                    Lichess
+                </a>
+            </li>
+            <li>
+                <a target="_blank" rel="noopener noreferrer" href="https://lichess.org/tv">
+                    Lichess Tv
+                </a>
+            </li>
+            <li>
+                <a target="_blank" rel="noopener noreferrer" href="https://lichess.org/training/themes">
+                    Lichess Ejercicios
+                </a>
+            </li>
+        </ul>
+        </nav>
+    </header>
+
+    <div class="main-hero">
+        <div class="content">
+            <h2 class="h2-hero">El Ajedrez es la puerta a la virtud.</h2>
+            <p class="p-hero">Comprensión, calculo, toma a lago o corto plazo de desición; estrategia y táctica... Son algunas caracteristicas de la profundidad del Ajedrez.</p>
+            <div class="hero-button"><a target="_blank" rel="noopener noreferrer" href="https://lichess.org/"><button class="b-hero">Ingresar</button></a></div>
+        </div>
+
+        <div class="hero-img">
+            <img class="img-hero" src="img/pexels-felixmittermeier-957312.jpg" alt="">
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
