Maquetar card section

--- a/index.html
+++ b/index.html
@@ -129,5 +129,34 @@ hace parte de la primera elaboración de la landing page*/ -->
     </div>
 </section>
 
+<section class="card">
+    <div class="h2-card">
+        <h2 class="h2-card">Piezas de ajedrez</h2>
+    </div>
+
+    <div class="cards-text">
+        <div class="img-card">
+            <img class="img" src="img/rn.jpg" alt="">
+            <p>Rey Negro</p>
+        </div>
+
+        <div class="img-card">
+            <img class="img" src="img/dn.jpg" alt="">
+            <p>Dama Negra</p>
+        </div>
+
+        <div class="img-card">
+            <img class="img" src="img/rb.jpg" alt="">
+            <p>Rey Blanco</p>
+        </div>
+
+        <div class="img-card">
+            <img class="img" src="img/db.jpg" alt="">
+            <p>Dama Blanca</p>
+        </div>
+    </div>
+
+</section>
+
 </body>
 </html>
