Maquetar quote section

--- a/index.html
+++ b/index.html
@@ -158,5 +158,19 @@ hace parte de la primera elaboración de la landing page*/ -->
 
 </section>
 
+<section class="quote">
+    <div class="p-quote">
+        <p>
+
+            "La belleza de un movimiento no se refleja solo en su apariencia, <br> 
+                sino en el pensamiento detrás de el."
+        
+            <cite class="cite-quote">
+                Dr. S.Tarrasch
+            </cite>
+        </p>
+    </div>
+</section>
+
 </body>
 </html>
