Maquetar wrapper & footer

--- a/index.html
+++ b/index.html
@@ -172,5 +172,28 @@ hace parte de la primera elaboración de la landing page*/ -->
     </div>
 </section>
 
+<section class="wrapper">
+    <div class="wrapper-container">
+        <div class="text-wrapper">
+            <h2 class="h2-wrapper">
+                ¡Animate y aprende!
+            </h2>
+            <p class="p-wrapper">
+                Ingresa y participa en partidas inolvidables.
+            </p>
+        </div>
+
+        <div class="button-warapper">
+            <a target="_blank" rel="noopener noreferrer" href="https://lichess.org/">
+                <button class="b-wrapper">Ingresar</button>
+            </a>
+        </div>
+    </div>
+</section>
+
+<footer>
+    Copyright © The Odin Proyect 2025
+</footer>
+
 </body>
 </html>
